Revert some vendor prefix changes made during stylelint autofixes
Not sure if these are still required or not. Being conservative by leaving them for now.

--- a/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/single_page_apps/agents.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/single_page_apps/agents.scss
@@ -279,7 +279,7 @@ $icon-color: #647984;
     padding: 0 10px 0 40px;
     margin: 0;
     border: 1px solid #d6e0e2;
-    appearance: none;
+    -webkit-appearance: none;
     box-shadow: none;
     border-radius: 3px;
     background: #fff;
