Remove unnecessary tilde imports
These are done inconsistently anyway, most directly import from node_modules.

--- a/server/src/main/webapp/WEB-INF/rails/webpack/single_page_apps/global.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/single_page_apps/global.scss
@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import "~normalize-scss/sass/normalize/import-now";
+@import "normalize-scss/sass/normalize/import-now";
 @import "../views/global/common";
 
 $headings-margin-bottom: $global-margin-bottom;
