--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/new_plugins/foundation_hax.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/new_plugins/foundation_hax.scss
@@ -891,7 +891,7 @@ $grid-container-padding: $grid-padding-gutters;
 $grid-container-max: $global-width;
 $xy-block-grid-max: 8;
 
-@import "~foundation-sites/scss/foundation";
+@import "foundation-sites/scss/foundation";
 
 // stylelint-enable
 
