--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/components/forms/autocomplete.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/components/forms/autocomplete.scss
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 @import "../../global/common";
-@import "~awesomplete/awesomplete"; // don't add the `.css` extension!! See https://github.com/sass/node-sass/issues/2362#issuecomment-388634848
+@import "awesomplete/awesomplete";
 
 .awesomplete > ul > li {
   color: $black;
