--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/global/_mixins.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/global/_mixins.scss
@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import "~bourbon/core/bourbon";
+@import "bourbon/core/bourbon";
 
 $spinner-wrapper-height: 175px;
 
